--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
             <a rel="noopener" href="https://github.com/anguyen0501/ecommerce_agido"
               target="_blank">https://github.com/anguyen0501/ecommerce_agido</a><br />
             - Agido Shop:
-            <a rel="noopener" href="ecommerce-agido.vercel.app" target="_blank">ecommerce-agido.vercel.app</a><br />
+            <a rel="noopener" href="https://ecommerce-agido.vercel.app/" target="_blank">ecommerce-agido.vercel.app</a><br />
             - GitHub:
             <a rel="noopener" href="https://github.com/anguyen0501/admin_agido"
               target="_blank">https://github.com/anguyen0501/admin_agido</a><br />
             - Admin Dashboard:
-            <a rel="noopener" href="admin-agido.vercel.app/" target="_blank">admin-agido.vercel.app/</a>
+            <a rel="noopener" href="https://admin-agido.vercel.app/" target="_blank">admin-agido.vercel.app/</a>
           </td>
         </tr>
         <tr>
