feat: edit my_cv

--- a/index.html
+++ b/index.html
@@ -30,10 +30,7 @@
       <h3>SUMMARY</h3>
       <hr />
       <p>
-        As a 4th-year student with 3 months of experience in ReactJs
-        technologies, I have cultivated a passion for learning new
-        technologies and delving into documentation. I love teamwork and tend
-        to work well within a group.
+        As a recent graduate with 3 months of experience working with ReactJS technologies, I have developed a strong passion for learning new technologies and exploring documentation in depth. I enjoy teamwork and thrive in collaborative environments.
       </p>
     </div>
 
@@ -80,19 +77,22 @@
         </tr>
         <tr>
           <th>Members</th>
-          <td>1</td>
+          <td>2</td>
         </tr>
         <tr>
           <th>Positions</th>
-          <td>- Full-stack Developer</td>
+          <td>- Front-end Developer</td>
         </tr>
         <tr>
           <th>Responsibilities</th>
           <td>
-            - Design database<br />
-            - Implement RESTful APIs for the whole system<br />
-            - Write technical documentation and guides<br />
-            - Manage project schedule, assign tasks and do code review
+            - Designed MongoDB database with nested schemas for products, collections, orders, and customers<br />
+            - Handle Search, Add to Wishlist, Add to Cart functions<br />
+            - Built RESTful APIs for full CRUD operations and Stripe payment integration<br />
+            - Implemented authentication and user management using Clerk<br />
+            - Handled form validation with React-Hook-Form<br />
+            - Created a responsive and dynamic UI using Tailwind CSS, Shadcn UI, and Recharts<br />
+            - Integrated Cloudinary for image upload and storage<br />
           </td>
         </tr>
         <tr>
@@ -100,7 +100,7 @@
           <td>
             - Frontend: Next.js, Clerk, React-Hook-Form, Tailwind CSS, Shadcn UI, Next Cloudinary
             <br />
-            - Backend: MongoDB, Stripe for payment<br />
+            - Backend: MongoDB, RESTful APIs, Stripe for payment<br />
           </td>
         </tr>
       </table>
@@ -126,21 +126,21 @@
         <li>
           DBMS:
           <ul>
-            <li>MongoDB</li>
+            <li>MongoDB, MySql</li>
           </ul>
         </li>
         <li>
           Foreign Languages:
           <ul>
-            <li>English good</li>
+            <li>TOEIC: 600/990 (2023)</li>
           </ul>
         </li>
         <li>
           Others:
           <ul>
             <li>Version control: Git</li>
-            <li>Understand OOP, SOLID</li>
-            <li>Know Agile/Scrum process</li>
+            <li>Understand basic OOP</li>
+            <li>Know basic Agile/Scrum process</li>
           </ul>
         </li>
       </ul>
