--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </tr>
         <tr>
           <th>Positions</th>
-          <td>- Front-end Developer</td>
+          <td>- Full-stack Developer</td>
         </tr>
         <tr>
           <th>Responsibilities</th>
