--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         GitHub:
         <a rel="noopener" href="https://github.com/anguyen0501" target="_blank">https://github.com/anguyen0501</a>
       </p>
+      <p align="center">
+        Portfolio:
+        <a rel="noopener" href="https://portfolio-anjr.netlify.app/" target="_blank">https://portfolio-anjr.netlify.app/</a>
+      </p>
     </div>
   </header>
 
