--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       </p>
       <p align="center">
         GitHub:
-        <a rel="noopener" href="https://github.com/anguyen0501" target="_blank">https://github.com/anguyen0501</a>
+        <a rel="noopener" href="https://github.com/anguyen0501" target="_blank">github/anguyen0501</a>
       </p>
       <p align="center">
         Portfolio:
-        <a rel="noopener" href="https://portfolio-anjr.netlify.app/" target="_blank">https://portfolio-anjr.netlify.app/</a>
+        <a rel="noopener" href="https://portfolio-anjr.netlify.app/" target="_blank">https://nthaian.site/</a>
       </p>
     </div>
   </header>
@@ -34,7 +34,7 @@
       <h3>SUMMARY</h3>
       <hr />
       <p>
-        As a recent graduate with 3 months of experience working with ReactJS technologies, I have developed a strong passion for learning new technologies and exploring documentation in depth. I enjoy teamwork and thrive in collaborative environments.
+        As a recent graduate with 6 months of experience working with ReactJS technologies, I have developed a strong passion for learning new technologies and exploring documentation in depth. I enjoy teamwork and thrive in collaborative environments.
       </p>
     </div>
 
@@ -102,7 +102,7 @@
         <tr>
           <th>Technologies</th>
           <td>
-            - Frontend: Next.js, Clerk, React-Hook-Form, Tailwind CSS, Shadcn UI, Next Cloudinary
+            - Frontend: Reactjs(Next.js), Clerk, React-Hook-Form, Tailwind CSS, Shadcn UI, Next Cloudinary
             <br />
             - Backend: MongoDB, RESTful APIs, Stripe for payment<br />
           </td>
@@ -117,14 +117,15 @@
         <li>
           Programming Languages:
           <ul>
-            <li>Javascript, TypeScript</li>
+            <li>Javascript, TypeScript, PHP, Python</li>
             <li>HTML5, CSS3</li>
           </ul>
         </li>
         <li>
           Frameworks/Platforms:
           <ul>
-            <li>ReactJs, NextJs</li>
+            <li>ReactJs, NextJs, Laravel</li>
+            <li>Wordpress</li>
           </ul>
         </li>
         <li>
@@ -143,7 +144,7 @@
           Others:
           <ul>
             <li>Version control: Git</li>
-            <li>Understand basic OOP</li>
+            <li>Know basic OOP</li>
             <li>Know basic Agile/Scrum process</li>
           </ul>
         </li>
