--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <h3>SUMMARY</h3>
       <hr />
       <p>
-        As a recent graduate with 6 months of experience working with ReactJS technologies, I have developed a strong passion for learning new technologies and exploring documentation in depth. I enjoy teamwork and thrive in collaborative environments.
+        As a recent graduate with 3 months of experience working with ReactJS and Nextjs technologies, I have developed a strong passion for learning new technologies and exploring documentation in depth. I enjoy teamwork and thrive in collaborative environments.
       </p>
     </div>
 
@@ -124,8 +124,7 @@
         <li>
           Frameworks/Platforms:
           <ul>
-            <li>ReactJs, NextJs, Laravel</li>
-            <li>Wordpress</li>
+            <li>ReactJs, NextJs, Laravel, Wordpress</li>
           </ul>
         </li>
         <li>
